--- a/package.json
+++ b/package.json
@@ -6,12 +6,11 @@
 	},
 	"private": false,
 	"dependencies": {
-		"larvitadmingui": "latest",
 		"underscore.string": "latest",
 		"larvitdb": "latest",
 		"winston": "latest"
 	},
-	"description": "Generic admin GUI",
+	"description": "Simple blog module with admin GUI for larvitadmingui",
 	"devDependencies": {
 		"mocha": "latest",
 		"pre-git": "latest"
