--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
 		"url": "https://github.com/larvit/larvitblog",
 		"type": "git"
 	},
-	"version": "0.0.1-rc7",
+	"version": "0.0.1",
 	"readmeFilename": "README.md",
 	"bugs": {
 		"url": "https://github.com/larvit/larvitblog/issues"
