--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
 		"url": "https://github.com/larvit/larvitblog",
 		"type": "git"
 	},
-	"version": "0.2.0-rc3",
+	"version": "0.2.0",
 	"readmeFilename": "README.md",
 	"bugs": {
 		"url": "https://github.com/larvit/larvitblog/issues"
