--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
 		"larvitimages": "^0.2",
 		"larvitslugify": "^0.10",
 		"lodash": "^4",
-		"winston": "^"
+		"winston": "^2"
 	},
 	"description": "Simple blog module with admin GUI for larvitadmingui",
 	"devDependencies": {
@@ -32,7 +32,7 @@
 		"url": "https://github.com/larvit/larvitblog",
 		"type": "git"
 	},
-	"version": "0.2.3",
+	"version": "0.2.4",
 	"readmeFilename": "README.md",
 	"bugs": {
 		"url": "https://github.com/larvit/larvitblog/issues"
