--- a/package.json
+++ b/package.json
@@ -1,4 +1,6 @@
 {
+  "name": "larvitblog",
+  "version": "0.2.8",
   "author": {
     "name": "Mikael 'Lilleman' Göransson",
     "email": "lilleman@larvit.se",
@@ -7,17 +9,17 @@
   "private": false,
   "dependencies": {
     "async": "^1.5.2",
-    "larvitdb": "^0.4.4",
-    "larvitdbmigration": "^0.3.1",
-    "larvitimages": "^0.2.6",
-    "larvitslugify": "^0.10.9",
-    "lodash": "^4.0.1",
-    "winston": "^2.1.1"
+    "larvitdb": "^1.1.0",
+    "larvitdbmigration": "^1.0.2",
+    "larvitimages": "^0.3.0",
+    "larvitslugify": "^0.10.10",
+    "lodash": "^4.13.1",
+    "winston": "^2.2.0"
   },
   "description": "Simple blog module with admin GUI for larvitadmingui",
   "devDependencies": {
-    "mocha": "^2.4.2",
-    "pre-git": "^3.3.0"
+    "mocha": "^2.5.3",
+    "pre-git": "^3.8.4"
   },
   "pre-commit": [
     "npm test",
@@ -27,20 +29,17 @@
     "blog"
   ],
   "main": "blog.js",
-  "name": "larvitblog",
   "repository": {
     "url": "https://github.com/larvit/larvitblog",
     "type": "git"
   },
-  "version": "0.2.7",
   "readmeFilename": "README.md",
   "bugs": {
     "url": "https://github.com/larvit/larvitblog/issues"
   },
   "homepage": "https://github.com/larvit/larvitblog",
   "scripts": {
-    "test": "mocha",
-    "commit": "commit-wizard"
+    "test": "mocha"
   },
   "license": "MIT",
   "maintainers": [
