Removed unnecessary migrations and updated dependencies

--- a/package.json
+++ b/package.json
@@ -8,23 +8,18 @@
   },
   "private": false,
   "dependencies": {
-    "async": "^1.5.2",
-    "larvitdb": "^1.1.2",
-    "larvitdbmigration": "^1.0.2",
-    "larvitimages": "^0.3.1",
+    "async": "^2.1.4",
+    "larvitdb": "^1.2.5",
+    "larvitdbmigration": "^1.3.3",
+    "larvitimages": "^0.3.9",
     "larvitslugify": "^0.10.10",
-    "lodash": "^4.13.1",
-    "winston": "^2.2.0"
+    "lodash": "^4.17.4",
+    "winston": "^2.3.1"
   },
   "description": "Simple blog module with admin GUI for larvitadmingui",
   "devDependencies": {
-    "mocha": "^2.5.3",
-    "pre-git": "^3.8.4"
+    "mocha": "^3.2.0"
   },
-  "pre-commit": [
-    "npm test",
-    "eslint ./"
-  ],
   "keywords": [
     "blog"
   ],
@@ -47,14 +42,5 @@
       "name": "lilleman",
       "email": "lilleman@larvit.se"
     }
-  ],
-  "config": {
-    "pre-git": {
-      "commit-msg": [],
-      "pre-commit": [],
-      "pre-push": [],
-      "post-commit": [],
-      "post-merge": []
-    }
-  }
+  ]
 }
