--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "larvitblog",
-  "version": "0.4.0",
+  "version": "0.4.1",
   "author": {
     "name": "Mikael 'Lilleman' Göransson",
     "email": "lilleman@larvit.se",
@@ -12,8 +12,8 @@
     "larvitdb": "^1.2.5",
     "larvitdbmigration": "^2.0.0",
     "larvitimages": "^0.3.9",
-    "larvitslugify": "^0.10.10",
     "lodash": "^4.17.4",
+    "slugify": "^1.1.0",
     "winston": "^2.3.1"
   },
   "description": "Simple blog module with admin GUI for larvitadmingui",
