WIP for queue driven stuff

--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "private": false,
   "dependencies": {
     "async": "^2.1.4",
+    "larvitamintercom": "^0.2.2",
+    "larvitamsync": "^0.3.0",
     "larvitdb": "^1.2.5",
     "larvitdbmigration": "^2.0.0",
     "larvitimages": "^0.6.0",
