--- a/.eslintrc
+++ b/.eslintrc
@@ -1,35 +1,29 @@
 {
 	"env": {
-		"es6": true,
+		"node": true,
 		"mocha": true,
-		"node": true
+		"es6": true
 	},
 	"rules": {
-		"camelcase": [0],
-		"comma-spacing": [2, {"before": false, "after": true}],
-		"eol-last": [0],
-		"indent": ["error", "tab"],
-		"key-spacing": [0],
+		"strict": [2, "global"],
 		"no-mixed-requires": [0],
 		"no-multi-spaces": [0],
-		"no-process-exit": [0],
-		"no-shadow": [0],
-		"no-underscore-dangle": [0],
-		"no-unused-expressions": [2],
-		"no-unused-vars": [2],
-		"no-use-before-define": [0],
-		"one-var": [2],
-		"quotes": [2, "single"],
-		"semi": [2, "always"],
 		"space-infix-ops": [2],
-		"space-unary-ops": [1, { "words": true, "nonwords": true }],
-		"strict": [2, "global"],
+		"quotes": [2, "single"],
 		"vars-on-top": [2],
-		"space-before-function-paren": ["error", {
-			"anonymous": "always",
-			"named": "never",
-			"asyncArrow": "ignore"
-		}],
-		"keyword-spacing": ["error"]
+		"one-var": [2],
+		"no-shadow": [0],
+		"eol-last": [0],
+		"key-spacing": [0],
+		"indent": ["error", "tab"],
+		"space-unary-ops": [1, { "words": true, "nonwords": true }],
+		"no-underscore-dangle": [0],
+		"camelcase": [0],
+		"no-process-exit": [0],
+		"no-use-before-define": [0],
+		"no-unused-expressions": [2],
+		"semi": [2, "always"],
+		"no-unused-vars": [2],
+		"comma-spacing": [2, {"before": false, "after": true}]
 	}
 }
