--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "larvitblog",
-  "version": "0.5.0",
+  "version": "0.6.0",
   "author": {
     "name": "Mikael 'Lilleman' Göransson",
     "email": "lilleman@larvit.se",
@@ -14,13 +14,16 @@
     "larvitdb": "^1.2.5",
     "larvitdbmigration": "^2.0.0",
     "larvitimages": "^0.6.0",
-    "larvitslugify": "^0.11.1",
+    "slugify": "^1.1.0",
     "lodash": "^4.17.4",
     "winston": "^2.3.1"
   },
   "description": "Simple blog module with admin GUI for larvitadmingui",
   "devDependencies": {
-    "mocha": "^3.2.0"
+    "mocha": "^3.2.0",
+	"moment": "^2.18.1",
+	"eslint": "^3.12.2",
+    "mocha-eslint": "^3.0.1"
   },
   "keywords": [
     "blog"
