--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "larvitblog",
-  "version": "10.0.0",
+  "version": "0.10.0",
   "author": {
     "name": "Mikael 'Lilleman' Göransson",
     "email": "lilleman@larvit.se",
@@ -17,13 +17,12 @@
     "larvitslugify": "^0.11.2",
     "larvitutils": "^2.1.0",
     "lodash": "^4.17.4",
-    "uuid": "^3.0.1",
-    "winston": "^2.3.1"
+    "uuid": "^3.0.1"
   },
   "description": "Simple blog module with admin GUI for larvitadmingui",
   "devDependencies": {
     "eslint": "5.16.0",
-    "mocha": "5.2.0",
+    "mocha": "6.1.3",
     "mocha-eslint": "5.0.0",
     "moment": "2.24.0"
   },
