--- a/.travis.yml
+++ b/.travis.yml
@@ -4,10 +4,9 @@ env:
   - CXX=g++-4.8
 
 node_js:
-  - 6
   - 8
-  - 9
   - 10
+  - 11
 
 notifications:
   email:
@@ -23,7 +22,7 @@ install:
 before_script:
   - mysql -e 'CREATE DATABASE test'
 
-script: mocha test/*.js -confFile=db_travis.json
+script: npm test
 
 services:
   - mysql
